--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc --project tsconfig.json",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -29,5 +32,11 @@
     "nodemon": "^3.1.11",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "tsconfig": {
+    "compilerOptions": {
+      "rootDir": "src",
+      "outDir": "dist"
+    }
   }
 }
